--- a/DemoCodeFirst.Data/App.config
+++ b/DemoCodeFirst.Data/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <clear/>
-    <add name="DemoCodeFirstConnection" connectionString="Data Source=.; Initial Catalog=DemoCodeFirst; Integrated Security=True; MultipleActiveResultSets=True"/>
+    <add name="DemoCodeFirstConnection" connectionString="Data Source=NGUYENVANKHANH\NGUYENVANKHANH; Initial Catalog=DemoCodeFirst; Integrated Security=True; MultipleActiveResultSets=True"/>
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
